--- a/social-frontend/src/components/topbar/topbar.css
+++ b/social-frontend/src/components/topbar/topbar.css
@@ -1,7 +1,7 @@
 .topbarContainer {
   height: 50px;
   width: 100%;
-  background-color: #4c03f5;
+  background-color: #690183;
   display: flex;
   align-items: center;
   position: sticky;
