--- a/social-frontend/src/pages/login/login.css
+++ b/social-frontend/src/pages/login/login.css
@@ -64,6 +64,13 @@
     font-weight: 500;
     cursor: pointer;
 }
+.loginButton:focus{
+  outline: none;
+}
+
+.loginButton:disabled{
+  cursor: not-allowed;
+}
 
 .loginForgot{
     text-align: center;
