added frontend design of messenger

--- a/social-frontend/src/pages/register/register.css
+++ b/social-frontend/src/pages/register/register.css
@@ -76,7 +76,7 @@
     height: 50px;
     border-radius: 10px;
     border: none;
-    background-color: #42b72a;
+    background-color: #690183;
     color: white;
     font-size: 20px;
     font-weight: 500;
